--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <a
- href="Index.html"target='_self' title="Home"> <img src="IMG/Logo.png" alt="Home logo">
+ href="index.html"target='_self' title="Home"> <img src="IMG/Logo.png" alt="Home logo">
  <br>
  <a href="page2.html"><button style="background-color:deepskyblue ; color:ghostwhite;border-radius:5px" title="Next page">Choose status </button></a>
 </a>
