--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <a
- href="Index.html"target='_self' title="Home"> <img src="IMG/Logo.png" alt="Home logo">
+ href="index.html"target='_self' title="Home"> <img src="IMG/Logo.png" alt="Home logo">
 </a>
 <br>
 <br>
