--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </center>
 <br>
 <br>
-<audio muted controls autoplay loop>
+<audio controls autoplay loop>
     <source src="Audio/romantic.mp3">
     <source src="Audio/romantic.wav">
 
